--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,9 @@
-[submodule "tmux/.tmux/plugins/tpm"]
-	path = tmux/.tmux/plugins/tpm
-	url = https://github.com/tmux-plugins/tpm
-	shallow = true
-	ignore = dirty
 [submodule "vim/.vim/vim-plug"]
 	path = vim/.vim/vim-plug
 	url = https://github.com/junegunn/vim-plug
+[submodule "i3/.config/i3/j4-make-config"]
+	path = i3/.config/i3/j4-make-config
+	url = https://github.com/okraits/j4-make-config
+[submodule "zsh/.zsh/grml-etc-core"]
+	path = zsh/.zsh/grml-etc-core
+	url = https://github.com/grml/grml-etc-core.git
