--- a/screen/.screenrc
+++ b/screen/.screenrc
@@ -2,7 +2,7 @@ startup_message off
 
 hardstatus on
 hardstatus alwayslastline
-hardstatus string '%{= kG}%{C}%S: %{c}%{= kG}[%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{C} %Y-%m-%d %{W}%c %{g}] %H'
+hardstatus string '%{= kG}%{C}%S: %{c}%{= kG}[%= %{= kw}%?%-Lw%?%{r}(%{W}%n*%f%t%?(%u)%?%{r})%{w}%?%+Lw%?%?%= %{g}][%{C} %Y-%m-%d %{W}%c %{g}]'
 
 # mouse
 defscrollback 100000
