--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -166,7 +166,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
-        position top
+        position bottom
         strip_workspace_numbers no
 colors {
 	# <bar>
