--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -49,7 +49,7 @@ bindsym $mod+d $i3action_launch
 # compatibility with dwm
 bindsym $mod+p $i3action_launch
 
-# There also is the (new) i3-dmenu-desk which only displays applications
+# There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 set $i3action_launch_desktop "exec rofi -show drun || i3-dmenu-desktop"
