add comment to screen
Former-commit-id: 7efc430aa6cb509bc8452c2a6bb11c8c2ee52513
Former-commit-id: caaa0f89bb7e60c431366ee173efca7166d61bdb
Former-commit-id: 62878683d1f7653565033b7f94b7a3d22d3cad9e
Former-commit-id: 997e356e74b1f09e86b7af5c46abc27a17028027
Former-commit-id: a3ae90482541581800f803dbeeb23738e3f788d3 [formerly 2156749599ea9efecb626c92e6e8d7c9c6954f49]
Former-commit-id: 269fc94870aa42ae0590f0e34cdfd42a3bad4353

--- a/screen/.screenrc
+++ b/screen/.screenrc
@@ -15,4 +15,5 @@ rendition so =00
 # fix residual text (vim, nano)
 altscreen on
 
+# for chrome secure shell app
 # -oCompression=yes -oCheckHostIP=no -oServerAliveInterval=60 -t -- /bin/sh -c "prodcertstatus || prodaccess ; screen -D -R -S laptop"
