--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -173,28 +173,22 @@ bar {
         position bottom
         strip_workspace_numbers no
 colors {
-	# <bar>
-	background #47172c
-	separator  #f37320
-	statusline #aea79f
-
-	# <workclass>	    <border> <backgr.> <text>
-	focused_workspace   #f47f31 #f37320 #ffffff
-	active_workspace    #6c2e55 #61194a #ffffff
-	inactive_workspace  #542937 #47172c #aea79f
-	urgent_workspace    #f0be50 #efb73e #ffffff
+	background #222222
+	statusline #dddddd
+	separator #666666
+	focused_workspace #0088CC #0088CC #ffffff
+	active_workspace #333333 #333333 #888888
+	inactive_workspace #333333 #333333 #888888
+	urgent_workspace   #2f343a #900000 #ffffff
 }
 }
 
-# <clientclass>         <border> <backgr.> <text> <indicator>
-client.focused          #f47f31 #f37320 #ffffff #f58c46
-client.focused_inactive #6c2e55 #61194a #ffffff #774060
-client.unfocused        #542937 #47172c #aea79f #603944
-client.urgent           #f0be50 #efb73e #ffffff #efb73e
-
-# $i3-background
-exec_always --no-startup-id xsetroot -solid '#542937'
-
+# class                 border  backgr. text    indicator
+client.focused          #0088CC #0088CC #ffffff #dddddd
+#client.focused_inactive #0C2D3C #0C2D3C #888888 #484e50 # I don't like it that way
+client.focused_inactive #333333 #333333 #888888 #292d2e
+client.unfocused        #333333 #333333 #888888 #292d2e
+client.urgent           #2f343a #900000 #ffffff #900000
 # $i3-status
 
 # move to previous workspace on same display
@@ -239,19 +233,5 @@ bindsym XF86AudioMute $i3action_volume
 
 # shortcut keys
 bindsym $mod+g exec google-chrome --profile-directory="Default"
-bindsym $mod+Shift+G exec google-chrome --profile-directory="Profile 1"
-
-# exec {{{
-# autostart apps
-exec --no-startup-id dex --autostart --environment x-cinnamon
-# autolock screen
-exec --no-startup-id xset s 600 5 && xss-lock -n /usr/lib/xsecurelock/dimmer -l -- $i3action_lockscreen
-# set keyboard layout
-exec_always --no-startup-id setxkbmap -option altwin:swap_alt_win us # swap left win and left alt
-# set desktop wallpaper
-exec_always --no-startup-id [[ -f ~/.wallpaper ]] && feh --bg-scale ~/.wallpaper
-# update Xresources
-exec_always --no-startup-id xrdb -merge ~/.Xresources
-# }}}
 
 # vim: fdm=marker ft=i3
