navigate with whitespace
Former-commit-id: e3b64259ed281773932214bbdce04ffc651a9bdc
Former-commit-id: c8a2e55a85b1f856c0771e6d992aae5c107ce853
Former-commit-id: fcd51e71b5badc50175017cf430402a5044527aa
Former-commit-id: 6c98035ded7aed24734897452bbf32f573a169b6
Former-commit-id: dce1b97baa7bc9a2fe5c8e4841c7092398fbca70 [formerly 83ac798d1bd921b80800c80a2e1b8f26d4d9d5dc]
Former-commit-id: 00339881215e145d141b870fa79f61214a3d42e3

--- a/main/.inputrc
+++ b/main/.inputrc
@@ -2,7 +2,7 @@
 # programs that use the GNU readline(3) library.
 # Existing programs include FTP, Bash, and GDB.
 #
-# You can re-read the inputrc file with C-x C-r.
+# You can re-read this inputrc file with C-x C-r or `bind -f ~/.inputrc`.
 #
 # This config is vi centric but it also supports emacs hybridly.
 
@@ -64,6 +64,10 @@ set visible-stats on
 # Turn ellipsis into three dots.
 "\xE2\x80\xA6": "..."
 
-# This allows you to search through your history using the up and down arrows … i.e. type "cd" and press the up arrow and you'll search through everything in your history that starts with "cd".
+# This allows you to search through your history using the up and down arrows i.e. type "cd" and press the up arrow and you'll search through everything in your history that starts with "cd".
 "\e[A": history-search-backward
 "\e[B": history-search-forward
+
+# Navigate back and forward through whitespace.
+"\e\C-b":vi-bWord
+"\e\C-f":vi-fWord
