make AUR ssh user agnostic
Former-commit-id: 1ea4adb4e1b7b7c87a374c406f8ffc79101931ef
Former-commit-id: 210fb14c8bcff26c2fc2eb2f7d2266a13b9c59d9
Former-commit-id: 8eb45b00ace5432ede150442ac81ceceb28e2b13
Former-commit-id: 04b8617752de8d6302bd4f945a9b21dd83fda4a0
Former-commit-id: 298deb3e3db5dd7f124053edb6a0fb032da15948 [formerly 9f5db4e9197f3831443c7934ca1391e32c07298f]
Former-commit-id: ae81caeca206d632984a4ed2d7ab8d0531f474fb

--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -18,5 +18,7 @@ Host *
 	ServerAliveInterval 300
 
 # https://wiki.archlinux.org/index.php/Arch_User_Repository
-Host aur.archlinux.org
-	User thiagowfx
+Host aur aur.archlinux.org
+	HostName aur.archlinux.org
+	IdentityFile ~/.ssh/id_rsa
+	User aur
