fix tmux install
Former-commit-id: aee5cc37e1f3e8d76819c8d598b27196426afd01
Former-commit-id: 4b68c8966b61ee5ad991dc07bf3346ad2260f348
Former-commit-id: e1c82856115e83581c42d81c5bdf36d70186e32e
Former-commit-id: 644a52387701bd31c053507aa8b8c4f492cafe80
Former-commit-id: 60b20c10376244e0e2285a6dbe0543837094c94a [formerly a08cc5f5e2678a1dba900acf7047fc1a3ca070aa]
Former-commit-id: d515abcffc68a8bccd085470a57382ac1797d285

--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -111,9 +111,9 @@ set -g set-titles-string "tmux:#I:#W"
 # Set bell style.
 set -g window-status-bell-style fg=red,bg=default,bright
 
-# Initialize tmux plugin manager.
-# This line should be at the very bottom of tmux.conf.
-run -b '~/.tmux/plugins/tpm/tpm'
-
 # Load corp config if any.
 if "[ -f ~/.tmux.conf_corp ]" 'source ~/.tmux.conf_corp'
+
+# Initialize tmux plugin manager.
+# This line should be at the very bottom of tmux.conf.
+run '~/.tmux/plugins/tpm/tpm'
