improve tmux config
Former-commit-id: bda0486c0ef2f4343ca1d06864c4d9ac0295a0a3
Former-commit-id: 9654e623f89b81d5cee898c22304d420087b4631
Former-commit-id: cd6e69c3bad138e000a3773a48f5da0e73fcff52
Former-commit-id: a27f3541ea0f9107731207c8e7236cddb115baab
Former-commit-id: bf28098e3dcec7294750560471c7105b88d99efd [formerly dd6d84a5267c608e955c93e949efc6198a242d32]
Former-commit-id: 8288ea54dafa54fe53790d41bf1a100d3a688759

--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -35,6 +35,10 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
 
+# Facebook PathPicker
+#   C-a f to invoke
+set -g @plugin 'tmux-plugins/tmux-fpp'
+
 # Prefix key
 set -g prefix C-a
 
@@ -55,7 +59,9 @@ set -g default-terminal "tmux-256color"
 set -g mode-keys vi
 
 # Enable mouse mode
+#   C-a m to toggle
 set -g mouse on
+bind m set -g mouse
 
 # Renumber windows sequentially after closing any of them.
 set -g renumber-windows on
@@ -70,16 +76,13 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Kill a pane, a la GNU screen. Confirm before killing.
+# Kill a pane a la GNU screen. Confirm before killing.
 bind K confirm kill-pane
-
-# Add shortcut to quickly toggle mouse mode
-bind m set -g mouse
 
 # Reload tmux config file
 bind r source ~/.tmux.conf \; display "Reloaded ~/.tmux.conf!"
 
-# Don't suspend-client
+# Do not suspend-client
 unbind C-z
 
 # Set status bar style.
@@ -92,7 +95,7 @@ set -g status-right-length 65
 
 # Set status bar content.
 set -g status-left "#[fg=cyan]#H #[fg=colour239]• #[default]"
-set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[strikethrough,dim]🖱️#[default]}"
+set -g status-right "#{prefix_highlight} #{?window_zoomed_flag,🔍 ,}#{?mouse,,#[dim]🖱️❌}#[default]"
 
 # Set window title style.
 set -g window-status-format "#I:#W"
@@ -111,7 +114,7 @@ set -g set-titles-string "tmux:#I:#W"
 # Set bell style.
 set -g window-status-bell-style fg=red,bg=default,bright
 
-# Load corp config if any.
+# Load corp configs if any.
 if "[ -f ~/.tmux.conf_corp ]" 'source ~/.tmux.conf_corp'
 
 # Initialize tmux plugin manager.
