move screen to deprecated
Former-commit-id: 515ae6af5cec578a7146b45580f02208e53e1599
Former-commit-id: 743c648536acd66783d37f2554b963cc1d650a64
Former-commit-id: d30e224ceb50e731d65ed97edbd71d559b8ed466
Former-commit-id: f63b3640368c6893be20996ec0687915fee82eaf
Former-commit-id: 68adbfd213fc80f8451099e6c9dc3bf8de58f3f1 [formerly c8ba99bd6c6c5a91fcb896fd99ca66b0228efa4b]
Former-commit-id: 6538d26c25c6a51682a700c3ecc7bf1d21ecb7ca

--- a/deprecated/.screenrc
+++ b/deprecated/.screenrc
@@ -1,3 +1,7 @@
+# DEPRECATED:
+#   Prefer tmux over screen.
+#   This file is preserved for historical purposes as it provides sensible GNU screen defaults.
+
 # don't display lengthy license and version information on startup
 startup_message off
 
@@ -58,5 +62,5 @@ bindkey "^A^[OB" focus down
 bindkey "^A^[OD" focus left
 bindkey "^A^[OC" focus right
 
-# load corp config if any
+# load corp configs if any
 source ~/.screenrc_corp
