update ssh config
Former-commit-id: cf175f84578ee732a4c10a492108068ad04cec66
Former-commit-id: f1baf5df7837a957ef12ca98b03980b1265bc34e
Former-commit-id: e6c15d4e81b2365b8061ac21c49f2785ee9173e6
Former-commit-id: 4777f28168ec73061ca719448ca52a2f4b6c8022
Former-commit-id: 00d733f63232d8baaec30378a96429dfb8247610 [formerly 3f016d910244f989f680c28c643bd4607e380804]
Former-commit-id: 0249be5166d5ad6f3b50fdd2e6b227251692e78f

--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -1,3 +1,5 @@
+# SSH Client config.
+
 # Specifies whether keys should be automatically added to a running ssh-agent(1).
 # If this option is set to yes and a key is loaded from a file, the key and its
 # passphrase are added to the agent with the default lifetime, as if by ssh-add(1).
@@ -18,7 +20,8 @@ Host *
 	ServerAliveInterval 300
 
 # https://wiki.archlinux.org/index.php/Arch_User_Repository
+#   https://github.com/eli-schwartz/aurpublish snippet
 Host aur aur.archlinux.org
 	HostName aur.archlinux.org
-	IdentityFile ~/.ssh/id_rsa
+	IdentityFile ~/.ssh/id_aur
 	User aur
