--- a/main/.xsessionrc
+++ b/main/.xsessionrc
@@ -16,10 +16,10 @@ export GDK_SCALE="1.5"
 export QT_AUTO_SCREEN_SCALE_FACTOR=1
 
 # Set wallpaper.
-"$HOME/.fehbg" &
+"$HOME/.fehbg"
 
 # Update ~/.Xresources.
-xrdb -merge ~/.Xresources &
+xrdb -merge ~/.Xresources
 
 # Autostart applications.
 dex --autostart --environment tilingwm &
