--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -20,8 +20,7 @@ Host *
 	ServerAliveInterval 300
 
 # https://wiki.archlinux.org/index.php/Arch_User_Repository
-#   https://github.com/eli-schwartz/aurpublish snippet
-Host aur aur.archlinux.org
+Host aur
 	HostName aur.archlinux.org
 	IdentityFile ~/.ssh/id_aur
 	User aur
