--- a/main/.config/alacritty/alacritty.yml
+++ b/main/.config/alacritty/alacritty.yml
@@ -1,3 +1,11 @@
+env:
+  TERM: xterm-256color
+
+font:
+  size: 12
+  normal:
+    family: Hermit
+
 # /base16/monokai.dark: https://terminal.sexy/
 colors:
   # Default colors
