--- a/main/.hgrc
+++ b/main/.hgrc
@@ -2,9 +2,13 @@
 username = Thiago Perrotta <tbperrotta@gmail.com>
 merge = vimdiff
 
+# https://github.com/whiteinge/diffconflicts
 [merge-tools]
-vimdiff.executable = vim
-vimdiff.args = -d $base $local $output $other +close +close
+diffconflicts.executable=vim
+diffconflicts.args=-c 'let g:diffconflicts_vcs="hg"' -c DiffConflicts "$output" $base $local $other
+diffconflicts.premerge=keep
+diffconflicts.check=conflicts
+diffconflicts.priority=99
 
 [extensions]
 color =
