--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -36,7 +36,7 @@ set -g @prefix_highlight_show_copy_mode 'on'
 set -g @prefix_highlight_show_sync_mode 'on'
 
 # Facebook PathPicker
-#   C-a f to invoke
+#   C-a f to invoke fpp
 set -g @plugin 'tmux-plugins/tmux-fpp'
 
 # Prefix key
