hushlogin, colored man pages, ssh keep alive

--- a/main/.ssh/config
+++ b/main/.ssh/config
@@ -14,9 +14,7 @@ Host *
 	# Requests compression of all data
 	Compression yes
 
-	# Sets a timeout interval in seconds after which if no data has been received from the server,
-	# ssh(1) will send a message through the encrypted channel to request a response from the server.
-	# The default is 0, indicating that these messages will not be sent to the server.
+	# Keep-alive. The default is 0, indicating that these messages will not be sent to the server.
 	ServerAliveInterval 300
 
 # https://wiki.archlinux.org/index.php/Arch_User_Repository
