--- a/main/.tmux.conf
+++ b/main/.tmux.conf
@@ -5,6 +5,7 @@
 #
 # Reload tmux config:
 #   C-a r
+#   C-a R
 #
 # Plugin management:
 #   Install new plug-ins: C-a I
@@ -42,7 +43,8 @@ set -g @plugin 'tmux-plugins/tmux-fpp'
 # Prefix key
 set -g prefix C-a
 
-# Map C-a a to literal C-a
+# C-a a goes to beginning of line.
+#   C-a C-a ditto.
 bind a send-prefix
 
 # Do not change window name automatically once it is manually set
@@ -52,7 +54,7 @@ set -g allow-rename off
 set -g base-index 1
 setw -g pane-base-index 1
 
-# Force 256 colors
+# Set $TERM and force 256 colors.
 set -g default-terminal "tmux-256color"
 
 # Set vi mode keybindings for copy mode.
@@ -80,7 +82,7 @@ bind l select-pane -R
 bind K confirm kill-pane
 
 # Reload tmux config file
-bind r source ~/.tmux.conf \; display "Reloaded ~/.tmux.conf!"
+bind r source ~/.tmux.conf \; display "Sourced .tmux.conf!"
 
 # Do not suspend-client
 unbind C-z
